# pydantic-marshals

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: assert-contains.md
examples/assert-contains/: main.py  pyproject.toml
examples/sqlalchemy/: full.py  pyproject.toml
pydantic_marshals/: fullstack.py  plugin.py  pydantic_test.py  stub.pyi  utils.py
pydantic_marshals/base/: __init__.py  composite.py  models.py  type_aliases.py
pydantic_marshals/base/fields/: base.py  properties.py
pydantic_marshals/contains/: __init__.py  full.py  models.py  type_aliases.py
pydantic_marshals/contains/fields/: constants.py  lists.py  nested.py  typed.py  wildcards.py
pydantic_marshals/contains/type_generators/: base.py  collections.py
pydantic_marshals/fields/: base.py  properties.py
pydantic_marshals/fields/sqlalchemy/: columns.py  relationships.py
pydantic_marshals/models/: base.py  sqlalchemy.py
pydantic_marshals/mypy/: magic.pyi  plugin.py
pydantic_marshals/sqlalchemy/: __init__.py  models.py
pydantic_marshals/sqlalchemy/fields/: columns.py  relationships.py
tests/functional/: test_contains.py  test_sqlalchemy.py
tests/unit/: conftest.py  test_basic.py  test_type_hint.py
tests/unit/base/: test_base_field.py  test_composite.py  test_field_converter.py  test_model.py  test_propery_field.py
tests/unit/contains/: test_fields.py  test_main.py  test_model.py  test_type_generators.py
tests/unit/sqlalchemy/: test_column_field.py  test_mapped_model.py  test_relationship_field.py
