[tool.poetry]
name = "pydantic-marshals-sqlalchemy-example"
version = "0.1.7"
description = ""
authors = ["niqzart <niqzart@gmail.com>"]
readme = "README.md"
packages = [{include = "pydantic_marshals_sqlalchemy_example"}]

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.4.1"
pydantic-marshals = {path = "../..", extras = ["sqlalchemy"], develop = true}

[tool.mypy]
plugins = "pydantic_marshals.mypy.plugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
